--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
       <!--Our skills-->
       <h2 class="visually-hidden">Наши преимущества</h2>
       <section class="about section">
+        <div class="icon container">
+          <div class="about-icon"></div>
+          <div class="about-icon"></div>
+          <div class="about-icon"></div>
+          <div class="about-icon"></div>
+        </div>
         <div class="container">
           <ul class="about-list list">
             <li class="about-list-item">
