--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
         </nav>
         <ul class="contact list">
           <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="header-contact link">
+              <svg class="contact-icon" width="16px" height="12px">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contact-item">
-            <a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="header-contact link">
+              <svg class="contact-icon" width="10px" height="16px">
+                <use href="./images/icons.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -53,10 +63,26 @@
       <h2 class="visually-hidden">Наши преимущества</h2>
       <section class="about section">
         <div class="icon container">
-          <div class="about-icon"></div>
-          <div class="about-icon"></div>
-          <div class="about-icon"></div>
-          <div class="about-icon"></div>
+          <div class="icon-list">
+            <svg class="about-icon" width="70px" height="70px">
+              <use href="./images/icons.svg#antenna"></use>
+            </svg>
+          </div>
+          <div class="icon-list">
+            <svg class="about-icon" width="70px" height="70px">
+              <use href="./images/icons.svg#clock"></use>
+            </svg>
+          </div>
+          <div class="icon-list">
+            <svg class="about-icon" width="70px" height="70px">
+              <use href="./images/icons.svg#diagram"></use>
+            </svg>
+          </div>
+          <div class="icon-list">
+            <svg class="about-icon" width="70px" height="70px">
+              <use href="./images/icons.svg#astronaut"></use>
+            </svg>
+          </div>
         </div>
         <div class="container">
           <ul class="about-list list">
@@ -123,6 +149,36 @@
               />
               <h3 class="team-subtitle">Игорь Демьяненко</h3>
               <p lang="en" class="team-description">Product Designer</p>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#Vector"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -133,11 +189,71 @@
               />
               <h3 class="team-subtitle">Ольга Репина</h3>
               <p lang="en" class="team-description">Frontend Developer</p>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#Vector"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img src="./images/img3.jpg" alt="фотография маркетолога" width="270" class="img" />
               <h3 class="team-subtitle">Николай Тарасов</h3>
               <p lang="en" class="team-description">Marketing</p>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#Vector"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -148,24 +264,138 @@
               />
               <h3 class="team-subtitle">Михаил Ермаков</h3>
               <p lang="en" class="team-description">UI Designer</p>
+              <ul class="social-list list">
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#Vector"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
       </section>
+      <section class="clients section">
+        <h2 class="clients-title">Постоянные клиенты</h2>
+        <ul class="clients-list list">
+          <li class="clients-item">
+            <a href="" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#Logo"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#Logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#Logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#Logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#Logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link">
+              <svg class="clients-icon" width="106px" height="60px">
+                <use href="./images/icons.svg#Logo-5"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo footer"><span class="accent">Web</span>Studio</a>
-        <address>
-          <ul class="address-list list">
-            <li><a href="" class="address"> г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
+      <div class="footer-container container">
+        <div>
+          <a href="./index.html" class="logo footer"><span class="accent">Web</span>Studio</a>
+          <address>
+            <ul class="address-list list">
+              <li><a href="" class="address"> г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="footer-contact link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li><a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="join">
+          <h2 class="join-title">присоединяйтесь</h2>
+          <ul class="join-list list">
+            <li class="join-item">
+              <a href="" class="join-link link">
+                <svg class="join-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li><a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a></li>
+            <li class="join-item">
+              <a href="" class="join-link link">
+                <svg class="join-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="join-item">
+              <a href="" class="join-link link">
+                <svg class="join-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#Vector"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="join-item">
+              <a href="" class="join-link link">
+                <svg class="join-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
