--- a/index.html
+++ b/index.html
@@ -353,13 +353,17 @@
           <a href="./index.html" class="logo footer"><span class="accent">Web</span>Studio</a>
           <address>
             <ul class="address-list list">
-              <li><a href="" class="address"> г. Киев, пр-т Леси Украинки, 26</a></li>
-              <li>
+              <li class="address-item">
+                <a href="" class="address"> г. Киев, пр-т Леси Украинки, 26</a>
+              </li>
+              <li class="address-item">
                 <a href="mailto:info@devstudio.com" class="footer-contact link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li><a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a></li>
+              <li class="address-item">
+                <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+              </li>
             </ul>
           </address>
         </div>
